<resources>
    <string name="app_name">Casillero Inteligente</string>
    <string name="version_demo">VERSION DEMO</string>
    <string name="cargar_inventario">CARGAR INVENTARIO</string>
    <string name="recoger_paquete">RECOGER PAQUETE</string>
    <string name="no_de_telefono">No. de Teléfono</string>
    <string name="no_de_orden">No. de Orden</string>
    <string name="nombre_courier">Courier</string>
    <string name="confirmar_login_1">Confirmar Inicio de Sesión</string>
    <string name="box_1">1</string>
    <string name="box_2">2</string>
    <string name="box_3">3</string>
    <string name="box_7">7</string>
    <string name="box_8">8</string>
    <string name="box_9">9</string>
    <string name="box_4">4</string>
    <string name="box_5">5</string>
    <string name="box_6">6</string>
    <string name="box_10">10</string>
    <string name="cmd_1">AAEB22020000B955</string>
    <string name="cmd_2">AAEB22020001BA55</string>
    <string name="cmd_3">AAEB22020002BB55</string>
    <string name="cmd_4">AAEB22020003BC55</string>
    <string name="cmd_5">AAEB22020004BD55</string>
    <string name="cmd_6">AAEB22020005BE55</string>
    <string name="cmd_7">AAEB22020006BF55</string>
    <string name="cmd_8">AAEB22020007C055</string>
    <string name="cmd_9">AAEB22020008C155</string>
    <string name="cmd_10">AAEB22020009C255</string>

    <string name="casillero1_ocupado">casillero1ocupado</string>
    <string name="casillero2_ocupado">casillero2ocupado</string>
    <string name="casillero3_ocupado">casillero3ocupado</string>
    <string name="casillero4_ocupado">casillero4ocupado</string>
    <string name="casillero5_ocupado">casillero5ocupado</string>
    <string name="casillero6_ocupado">casillero6ocupado</string>
    <string name="casillero7_ocupado">casillero7ocupado</string>
    <string name="casillero8_ocupado">casillero8ocupado</string>
    <string name="casillero9_ocupado">casillero9ocupado</string>
    <string name="casillero10_ocupado">casillero10ocupado</string>
    <string name="mypreference">mypref</string>

    <string name="select_serial_port">Puerto:</string>
    <string name="select_baud_rate">Baudrate:</string>
    <string name="open_serial_port">Abrir puerto</string>
    <string name="close_serial_port">Cerrar puerto</string>
    <string name="no_serial_device">Disp serial</string>
    <string name="send_data">Enviar</string>
    <string name="input_data">Comandos HEX</string>
    <string name="load_cmd_list">cargar archivo ext</string>
    <string name="clear">Limpiar</string>
    <string name="auto_end">auto end</string>
    <string name="info_cargar_inventario">Bienvenido. Seleccione un casillero, cargue el inventario y presione el botón ENVIAR CLAVE.</string>
    <string name="nombreRecolector">Nombre</string>
    <string name="claverecolector">Clave</string>
    <string name="validarRecolector">Validar</string>
    <string name="info_recoger_producto">Bienvenido. Retire su producto y presione el botón FINALIZAR.</string>
    <string name="btnOK_recogerProducto">Finalizar</string>
    <string name="correoCliente">Correo del cliente</string>

</resources>