<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BotonesCargarInventario">

    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/button6"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/textView3"
         />

    <Button
        android:id="@+id/button8"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button5"
        />

    <Button
        android:id="@+id/button10"
        android:layout_width="780dp"
        android:layout_height="200dp"
        android:background="@color/green_700"
        android:text="@string/box_10"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnOK_cargarInventario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button8"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/green_700"
        android:text="@string/box_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="784dp"
        android:layout_height="50dp"
        android:text="@string/info_cargar_inventario"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/btnOK_cargarInventario"
        android:layout_width="430dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/blue_900"
        android:drawableRight="@drawable/check_icon"
        android:text="Enviar clave"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>